todo list done along with arrays and loops

--- a/Javascript/10_rock_paper_scissors.html
+++ b/Javascript/10_rock_paper_scissors.html
@@ -33,7 +33,7 @@
     score.wins=0;   
     score.losses=0;
     score.ties=0;
-    localStorage.removeItem('score');
+    localStorage.setItem('score', JSON.stringify(score));
     updatescore();
     " class="reset-btn">Reset Score</button>
   <script src="scripts/10_rock_paper_n_scissors.js">
