--- a/Javascript/11_arrays_loops.html
+++ b/Javascript/11_arrays_loops.html
@@ -39,7 +39,7 @@
       const arr2=arr1.slice();
       arr2.push(4);
       console.log(arr1); 
-      console.log(arr2); 
+      console.log(arr2.reverse()); 
     </script>
   </body>
 </html> 
